# django_gcp_iam_auth

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  requirements.txt
.github/workflows/: python-app.yml
src/django_gcp_iam_auth/postgresql/: base.py
tests/: conftest.py  test_simple.py
